cocoa: fix layout of first run dialog with long localized strings

In locales with significantly longer strings, the checkbox labels can
require wrapping, which may require moving all the controls below them
downward and growing the window vertically.

This change:
1) Adds support for the resizing and reflowing mentioned above;
2) Adds a new command-line flag "--force-unofficial-first-run", which causes
   the First Run flow to happen even on non-branded builds.

Bug: 776683
Change-Id: I51952a79340248ccf3ea223538a679edaa4678e6
Reviewed-on: https://chromium-review.googlesource.com/749315
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513215}
Former-commit-id: f65944765c1e3072bf9ae72fa9f4fafbd31453bb